# dataflow_sim

./: .gitignore  README.md  extending_to_deepseek.md  extending_to_qwen35.md  pyproject.toml
app/: pyproject.toml
app/scripts/: canonical_sweep.py  compare_policies.py  pressurefit_mode_sweep.py  run_training.py  sweep_transformer.py
app/src/dataflow_app/server/: main.py
app/src/dataflow_app/workloads/: __init__.py  presets.py  training.py  transformer.py
app/tests/: test_server.py  test_training_workload.py  test_transformer.py
app/ui/: index.html  vite.config.ts
app/ui/src/: App.css  App.tsx  index.css  types.ts
app/ui/src/components/: AnnotatedPlanPanel.tsx  ComputeTimeline.tsx  InputPanel.tsx  MemoryBreakdown.tsx  MemoryPanel.tsx  MemoryTimelinePanel.tsx  PolicyDiagnosticsPanel.tsx  ReferenceStream.tsx  SubOpBreakdownPanel.tsx  SummaryPanel.tsx
docs/: README.md  datatypes.md  deepseek-v3.2-dsa-derivations.md  problem.md  recompute.md  research-framing.md  simulator-api.md  transformer-recipe.md  workload-recipe.md
examples/: README.md  export_transformer_training_schema.py
scripts/: canonical_sweep.py  compare_policies.py  pressurefit_mode_sweep.py  recompute_sweep.py  run_training.py  (+3 more)
simulator/: API.md  pyproject.toml
simulator/src/dataflow_sim/: __init__.py  reference_stream.py  schema.py  simulator.py  validate.py
simulator/src/dataflow_sim/policy/: __init__.py  _common.py  belady_reactive.py  max_reduce.py  min_grow.py  pressurefit.py  race_best.py  roundtrip_planner.py  shadow.py  sliding_window.py
simulator/src/dataflow_sim/policy/pressurefit_aux/: candidate_specs.py  core.py  diagnostics.py  emit.py  inbound_schedules.py  initial_protection.py  physical_repair.py  portfolio.py  reducer.py  seeds.py
simulator/tests/: conftest.py  invalid_chain_fixtures.py  test_auto_policy.py  test_min_grow.py  test_pressurefit.py  test_reference_stream.py  test_simulator.py  test_validate_chain.py
ui/: README.md  (+3 more)
(+188 files in other folders)
