[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataflow_sim"
version = "0.1.0"
description = "Discrete-event simulator, memory-planning policies, workload definitions, and webapp for dataflow scheduling research."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2",
  "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dataflow_sim"]

[tool.hatch.build.targets.wheel.force-include]
"src/dataflow_sim/workloads/models/model_dims.json" = "dataflow_sim/workloads/models/model_dims.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
