[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataflow_sim"
version = "0.1.0"
description = "Discrete-event simulator for 3-stream (compute / H2D / D2H) dataflow scheduling."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["src/dataflow_sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
